--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>This is akshaya's changes</h1>
     <h2>This is second changes</h2>
+    <ul>
+        <li>Silvoju</li>
+        <li>Akshaya</li>
+    </ul>
 </body>
 </html>
